l04 - сборка мусора